--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -3,7 +3,7 @@ name: LaTeX Build
 on:
   push:
     branches:
-      - main  # Adjust the branch name as needed
+      - '*'  # Run on all branches
 
 jobs:
   compile_resume:
