--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -13,12 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: List Files in Directory
+        run: ls -tahrl
+
       - name: Build LaTeX
         run: |
           sudo apt-get update
           sudo apt-get install -y texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
-          ls -tahrl
-
           pdflatex -interaction=nonstopmode -halt-on-error resume.tex
 
       - name: Upload Artifact
