--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -1,29 +1,32 @@
-name: LaTeX Build
+name: Build LaTeX document
 
 on:
   push:
     branches:
-      - '*'  # Run on all branches
+      - main
+    paths:
+      - 'resume.tex'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'resume.tex'
 
 jobs:
-  compile_resume:
+  build_pdf:
     runs-on: ubuntu-latest
+    container: 
+      image: ghcr.io/xu-cheng/latex-action:small-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: List Files in Directory
-        run: ls -tahrl
+    - name: Compile LaTeX document
+      run: latexmk -pdf -file-line-error -interaction=nonstopmode -output-directory=. resume.tex
 
-      - name: Build LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
-          pdflatex -interaction=nonstopmode -halt-on-error resume.tex
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: resume
-          path: resume.pdf
+    - name: Upload PDF
+      uses: actions/upload-artifact@v2
+      with:
+        name: resume.pdf
+        path: ./resume.pdf
